feat: 添加 checkout 功能